--- a/Spring/OpenProjectMVC/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/OpenProjectMVC/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,14 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
-
+	
+	<!-- 파일 업로드 경로 : 회원 가입 시 회원 사진 업로드 경로 -->
+	<context-param>
+		<param-name>memberUploadPath</param-name>
+		<param-value>/upload/users</param-value>
+	</context-param>
+	
+	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
