--- a/Spring/Spring-OpenProject/src/main/webapp/WEB-INF/web.xml
+++ b/Spring/Spring-OpenProject/src/main/webapp/WEB-INF/web.xml
@@ -56,9 +56,14 @@
 
 
 
-
-
-
+	<!-- 암호화 설정 -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/spring/root-context.xml
+			/WEB-INF/spring/spring-security.xml
+		</param-value>
+	</context-param>
 
 
 
